header part done

--- a/index.html
+++ b/index.html
@@ -6,12 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Football Assignment</title>
     <!-- Font awesome -->
+    <script src="https://kit.fontawesome.com/bb735d3069.js" crossorigin="anonymous"></script>
     <!-- favicon -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/Logo.png" type="image/x-icon">
     <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Responsive Website Assignment</h1>
+    <header>
+        <section class="container">
+            <div>
+                <h1>Conmebol <br>Copa America <br>2022</h1> 
+                <a href="#" target="_blank">Watch Live <i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+            <div class="banner">
+                <img src="images/banner.png" alt="">
+            </div>
+        </section>
+    </header>
 </body>
 </html>
