--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- header start -->
     <header>
-        <section class="container">
+        <section class="header-container">
             <div>
                 <h1>Conmebol <br>Copa America <br>2022</h1> 
                 <a href="#" target="_blank">Watch Live <i class="fa-solid fa-arrow-right"></i></a>
@@ -24,5 +25,71 @@
             </div>
         </section>
     </header>
+    <!-- header end -->
+    <main>
+        <!-- top players area -->
+        <section class="players">
+            <div class="player">
+                <img src="images/players/player-1.png" alt="">
+                <h3>Neymar Jr</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            </div>
+            <div class="player">
+                <img src="images/players/player-1.png" alt="">
+                <h3>Neymar Jr</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            </div>
+            <div class="player">
+                <img src="images/players/player-1.png" alt="">
+                <h3>Neymar Jr</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            </div>
+            <div class="player">
+                <img src="images/players/player-1.png" alt="">
+                <h3>Neymar Jr</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            </div>
+            <div class="player">
+                <img src="images/players/player-1.png" alt="">
+                <h3>Neymar Jr</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            </div>
+            <div class="player">
+                <img src="images/players/player-1.png" alt="">
+                <h3>Neymar Jr</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            </div>
+            <div class="player">
+                <img src="images/players/player-1.png" alt="">
+                <h3>Neymar Jr</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            </div>
+            <div class="player">
+                <img src="images/players/player-1.png" alt="">
+                <h3>Neymar Jr</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            </div>
+            <div class="player">
+                <img src="images/players/player-1.png" alt="">
+                <h3>Neymar Jr</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            </div>
+            <div class="player">
+                <img src="images/players/player-1.png" alt="">
+                <h3>Neymar Jr</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            </div>
+            <div class="player">
+                <img src="images/players/player-1.png" alt="">
+                <h3>Neymar Jr</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            </div>
+            <div class="player">
+                <img src="images/players/player-1.png" alt="">
+                <h3>Neymar Jr</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
