--- a/index.html
+++ b/index.html
@@ -91,5 +91,15 @@
             </div>
         </section>
     </main>
+    <footer>
+        <img src="images/Logo.png" alt="">
+        <div class="social-icons">
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-brands fa-dribbble"></i>
+        </div>
+        <p>Copyright &copy; 2022 Football</p>
+    </footer>
 </body>
 </html>
