--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,94 +13,108 @@
     <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <!-- header start -->
     <header>
-        <section class="header-container">
-            <div>
-                <h1>Conmebol <br>Copa America <br>2022</h1> 
+        <div class="header-container">
+            <div class="">
+                <h1 class="header-title">Conmebol <br>Copa America <br>2022</h1>
                 <a href="#" target="_blank">Watch Live <i class="fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="banner">
                 <img src="images/banner.png" alt="">
             </div>
-        </section>
+        </div>
     </header>
     <!-- header end -->
     <main>
         <!-- top players area -->
-        <section class="players">
+        <section class="container players">
             <div class="player">
                 <img src="images/players/player-1.png" alt="">
                 <h3>Neymar Jr</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                    lectus at.</p>
             </div>
             <div class="player">
-                <img src="images/players/player-1.png" alt="">
-                <h3>Neymar Jr</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <img src="images/players/player-2.png" alt="">
+                <h3>Lionel Messi</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                    lectus at.</p>
             </div>
             <div class="player">
-                <img src="images/players/player-1.png" alt="">
-                <h3>Neymar Jr</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <img src="images/players/player-3.png" alt="">
+                <h3>Cristiano Ronaldo</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                    lectus at.</p>
             </div>
             <div class="player">
-                <img src="images/players/player-1.png" alt="">
-                <h3>Neymar Jr</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <img src="images/players/player-4.png" alt="">
+                <h3>Paulo Dybala</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                    lectus at.</p>
             </div>
             <div class="player">
-                <img src="images/players/player-1.png" alt="">
-                <h3>Neymar Jr</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <img src="images/players/player-5.png" alt="">
+                <h3>Mesut Ozil</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                    lectus at.</p>
             </div>
             <div class="player">
-                <img src="images/players/player-1.png" alt="">
-                <h3>Neymar Jr</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <img src="images/players/player-6.png" alt="">
+                <h3>Mauro Icardi</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                    lectus at.</p>
             </div>
             <div class="player">
-                <img src="images/players/player-1.png" alt="">
-                <h3>Neymar Jr</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <img src="images/players/player-7.png" alt="">
+                <h3>Di Maria</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                    lectus at.</p>
             </div>
             <div class="player">
-                <img src="images/players/player-1.png" alt="">
-                <h3>Neymar Jr</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <img src="images/players/player-8.png" alt="">
+                <h3>Kylian Mbappé</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                    lectus at.</p>
             </div>
             <div class="player">
-                <img src="images/players/player-1.png" alt="">
-                <h3>Neymar Jr</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <img src="images/players/player-9.png" alt="">
+                <h3>Mohamed Salah</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                    lectus at.</p>
             </div>
             <div class="player">
-                <img src="images/players/player-1.png" alt="">
-                <h3>Neymar Jr</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <img src="images/players/player-10.png" alt="">
+                <h3>Harry Kane</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                    lectus at.</p>
             </div>
             <div class="player">
-                <img src="images/players/player-1.png" alt="">
-                <h3>Neymar Jr</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <img src="images/players/player-11.png" alt="">
+                <h3>Kevin De Bruyne</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                    lectus at.</p>
             </div>
             <div class="player">
-                <img src="images/players/player-1.png" alt="">
-                <h3>Neymar Jr</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <img src="images/players/player-12.png" alt="">
+                <h3>Philippe Coutinho</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                    lectus at.</p>
             </div>
         </section>
     </main>
     <footer>
         <img src="images/Logo.png" alt="">
         <div class="social-icons">
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-youtube"></i>
-            <i class="fa-brands fa-dribbble"></i>
+            <a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+            <a href="#" target="_blank"><i class="fa-brands fa-dribbble"></i></a>
         </div>
         <p>Copyright &copy; 2022 Football</p>
     </footer>
 </body>
+
 </html>
