--- a/index.html
+++ b/index.html
@@ -34,77 +34,82 @@
             <div class="player">
                 <img src="images/players/player-1.png" alt="">
                 <h3>Neymar Jr</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
-                    lectus at.</p>
+                <p>Neymar is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team. He is considered a versatile player, being able to play as either a central striker, second striker, winger or occasionally as an attacking midfielder.</p>
             </div>
             <div class="player">
                 <img src="images/players/player-2.png" alt="">
                 <h3>Lionel Messi</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
-                    lectus at.</p>
+                <p>Leo Messi is an Argentine professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and captains the Argentina national team. Often considered the best player in the world and widely regarded as one of the greatest players of all time.</p>
             </div>
             <div class="player">
                 <img src="images/players/player-3.png" alt="">
                 <h3>Cristiano Ronaldo</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
-                    lectus at.</p>
+                <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Premier League club Manchester United and captains the Portugal national team. Often considered the best player in the world and widely regarded as one of the greatest players of all time</p>
             </div>
             <div class="player">
                 <img src="images/players/player-4.png" alt="">
                 <h3>Paulo Dybala</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
-                    lectus at.</p>
+                <p>Paulo Dybala is an Argentine professional footballer who plays as a forward for Serie A club Juventus and the Argentina national team.</p>
             </div>
             <div class="player">
                 <img src="images/players/player-5.png" alt="">
                 <h3>Mesut Ozil</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
-                    lectus at.</p>
+                <p>Mesut Özil is a German professional footballer who plays as an attacking midfielder and is the captain of Turkish Süper Lig club Fenerbahçe. Özil is known for his technical skills, creativity, passing skills, and vision.[2] He can also play as a wide midfielder.</p>
             </div>
             <div class="player">
                 <img src="images/players/player-6.png" alt="">
                 <h3>Mauro Icardi</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
-                    lectus at.</p>
+                <p>Mauro Emanuel Icardi is an Argentine professional footballer who plays as a striker for Ligue 1 club Paris Saint-Germain and the Argentina national team.</p>
             </div>
             <div class="player">
                 <img src="images/players/player-7.png" alt="">
                 <h3>Di Maria</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
-                    lectus at.</p>
+                <p>Ángel Fabián Di María is an Argentine professional footballer who plays for Ligue 1 club Paris Saint-Germain and the Argentina national team. He can play as either a winger or attacking midfielder. During his peak, he was regarded as one of the world's best wingers.</p>
             </div>
             <div class="player">
                 <img src="images/players/player-8.png" alt="">
                 <h3>Kylian Mbappé</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
-                    lectus at.</p>
+                <p>Kylian Mbappé Lottin (born 20 December 1998) is a French professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the France national team. Considered one of the best players in the world, he is known for his dribbling, speed, and finishing.</p>
             </div>
             <div class="player">
                 <img src="images/players/player-9.png" alt="">
                 <h3>Mohamed Salah</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
-                    lectus at.</p>
+                <p>Mohamed Salah Hamed Mahrous Ghaly (born 15 June 1992) is an Egyptian professional footballer who plays as a forward for Premier League club Liverpool and captains the Egypt national team. Considered one of the best players in the world and amongst the greatest African players of all time, he is known for his finishing, dribbling, and speed.</p>
             </div>
             <div class="player">
                 <img src="images/players/player-10.png" alt="">
                 <h3>Harry Kane</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
-                    lectus at.</p>
+                <p>Harry Edward Kane MBE (born 28 July 1993) is an English professional footballer who plays as a striker for Premier League club Tottenham Hotspur and captains the England national team. Regarded as one of the best strikers in the world, Kane is known for his prolific goalscoring record and ability to link play.</p>
             </div>
             <div class="player">
                 <img src="images/players/player-11.png" alt="">
                 <h3>Kevin De Bruyne</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
-                    lectus at.</p>
+                <p>Kevin De Bruyne (born 28 June 1991) is a Belgian professional footballer who plays as a midfielder for Premier League club Manchester City and the Belgium national team. He is widely regarded as one of the best players in the world and pundits have often described him as a "complete footballer"</p>
             </div>
             <div class="player">
                 <img src="images/players/player-12.png" alt="">
                 <h3>Philippe Coutinho</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
-                    lectus at.</p>
+                <p>Philippe Coutinho Correia (born 12 June 1992) is a Brazilian professional footballer who plays as an attacking midfielder or winger for Premier League club Aston Villa, on loan from La Liga club Barcelona, and the Brazil national team. He is known for his combination of vision, passing, dribbling and ability to conjure curving long-range strikes.</p>
+            </div>
+        </section>
+        <!-- Teams -->
+        <section class="container">
+            <h2>Teams</h2>
+            <div class="countries">
+                <div class="country"><img src="images/countries/country-1.png" alt=""></div>
+                <div class="country"><img src="images/countries/country-2.png" alt=""></div>
+                <div class="country"><img src="images/countries/country-3.png" alt=""></div>
+                <div class="country"><img src="images/countries/country-4.png" alt=""></div>
+                <div class="country"><img src="images/countries/country-5.png" alt=""></div>
+                <div class="country"><img src="images/countries/country-6.png" alt=""></div>
+                <div class="country"><img src="images/countries/country-7.png" alt=""></div>
+                <div class="country"><img src="images/countries/country-8.png" alt=""></div>
+                <div class="country"><img src="images/countries/country-9.png" alt=""></div>
+                <div class="country"><img src="images/countries/country-10.png" alt=""></div>
             </div>
         </section>
     </main>
+    <!-- footer area -->
     <footer>
         <img src="images/Logo.png" alt="">
         <div class="social-icons">
